Fix grey overflow on printed PDF

--- a/static/css/resume.scss
+++ b/static/css/resume.scss
@@ -13,7 +13,7 @@ $contrast-to-theme-color: #f4d142;
     font-family: 'Noto Serif', serif;
     background: #fff;
     max-width: 8.5in;
-    max-height: 11in;
+    height: 11in;
     margin: auto;
     line-height: 1.4em;
 
